[WIP] Show Optimism L1 fees when showing totals
Here's where things are at:

* When sending a transaction on Optimism Kovan, request for L1 fee will
  be made and L1 and L2 fees will be shown on confirm screen
* All of the new Optimism code is located in a new `optimism` reducer,
  which has been tested

Remaining TODOs:

* Finish unit test for ConfirmTransactionBase
* Write any e2e tests to confirm that L1 and L2 fees are showing
  properly on confirm page
* Get the total in the confirm-approve modal to reflect addition of L1
  and L2 fee on Optimism networks
* Make sure that anything else that makes use of ConfirmTransactionBase
  is updated properly (I think there's one more component)

Caveats:

* Gas fees are so low on Optimism that they're only showing as 0 on the
  confirm screen — up the gas limit to see them

--- a/ui/components/app/transaction-detail-item/index.scss
+++ b/ui/components/app/transaction-detail-item/index.scss
@@ -1,5 +1,12 @@
 .transaction-detail-item {
   color: $ui-4;
+  margin-bottom: 5px;
+
+  &:last-child {
+    border-top: 1px solid $ui-3;
+    padding-top: 20px;
+    margin-top: 20px;
+  }
 
   &__row {
     display: flex;
